kubernetes/szilardshome/temp/traefik-external/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard-external-route 
  namespace: traefik-external
  annotations:
    external-dns.alpha.kubernetes.io/target: "10.10.4.61"
spec:
  parentRefs:
    - name: gateway-external
      namespace: traefik-external
  hostnames:
    - "traefik-external.szilardshome.com" 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs: 
        - name: api@internal
          kind: TraefikService
          group: traefik.io 
          port: 8081
